fix nav text-align right in desktop

--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,10 @@ main img{
   /*Add the media query here.  Make sure to */
 
 @media screen and (min-width: 800px){
-  nav{
+  header nav{
     padding-top: 35px;
     /* Requirement 10 code here -- Do not remove this comment. */
-    /* display: inline-block; */
     text-align: right;
-    /* float: right; */
   }
 
   nav li{
@@ -127,6 +125,7 @@ a.skip:focus{
   /* Requirement 15 code here -- Do not remove this comment. */
   .clients-image, .contact-image, .about-image, .method-image{
     overflow: auto;
+    /* margin: 80px; */
   }
 }
 
